--- a/index.html
+++ b/index.html
@@ -7,77 +7,80 @@
   <style>
     body {
       font-family: Arial, Helvetica, sans-serif;
-      margin: 20px;
+      margin: 15px;
       background: #f9f9f9;
       color: #222;
+      font-size: 13px;
     }
     header {
       text-align: center;
-      margin-bottom: 30px;
+      margin-bottom: 20px;
     }
     h1 {
       color: #d35400;
+      font-size: 1.8em;
     }
     .controls {
-      margin: 20px 0;
+      margin: 15px 0;
       text-align: center;
     }
     select, button {
-      font-size: 1em;
-      padding: 8px 12px;
-      margin: 5px;
+      font-size: 0.95em;
+      padding: 6px 12px;
+      margin: 4px;
       cursor: pointer;
     }
     .container {
       max-width: 100%;
       overflow-x: auto;
+      padding-bottom: 20px;
     }
     .meses {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(480px, 1fr));
-      gap: 25px;
+      grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+      gap: 20px;
     }
     .mes {
       background: white;
-      border: 1px solid #ccc;
+      border: 1px solid #ddd;
       border-radius: 6px;
-      padding: 12px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+      padding: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.08);
     }
     .mes h2 {
       text-align: center;
       color: #d35400;
-      margin: 0 0 8px;
-      font-size: 1.3em;
+      margin: 0 0 6px;
+      font-size: 1.2em;
     }
     .mini-cal {
-      font-size: 0.85em;
+      font-size: 0.8em;
       text-align: center;
-      margin-bottom: 8px;
-      color: #555;
+      margin-bottom: 6px;
+      color: #666;
     }
     table {
       width: 100%;
       border-collapse: collapse;
-      table-layout: fixed;
-      font-size: 0.82em;
-      line-height: 1.3;
+      table-layout: auto;
+      font-size: 0.8em;
+      line-height: 1.2;
     }
     th, td {
-      border: 1px solid #bbb;
+      border: 1px solid #ccc;
       padding: 4px 6px;
       text-align: left;
       vertical-align: top;
-      height: 80px;
+      min-height: 60px;
       position: relative;
     }
     th {
       background: #27ae60;
       color: white;
       text-align: center;
-      font-size: 0.8em;
       font-weight: bold;
       padding: 6px 4px;
+      white-space: nowrap;
     }
     td[contenteditable="true"] {
       cursor: text;
@@ -90,11 +93,12 @@
       position: absolute;
       top: 2px;
       right: 2px;
-      font-size: 0.7em;
-      padding: 2px;
+      font-size: 0.65em;
+      padding: 1px 4px;
       z-index: 5;
-      background: rgba(255,255,255,0.9);
-      border: 1px solid #ccc;
+      background: rgba(255,255,255,0.85);
+      border: 1px solid #aaa;
+      border-radius: 3px;
     }
 
     /* Colores de tu PDF */
@@ -104,8 +108,6 @@
     .pia { background: #9b59b6; color: white; }
     .apoyo { background: #3498db; color: white; }
     .receso { background: #27ae60; color: white; font-weight: bold; }
-    .hojalateria { background: #e67e22; color: white; }
-    .carpinteria { background: #8e44ad; color: white; }
 
     .zoom-container {
       transform-origin: top left;
@@ -132,19 +134,19 @@
   </div>
 </header>
 
-<div class="zoom-container" id="zoomContainer">
+<div class="zoom-container" id="zoomContainer" style="transform: scale(0.9);">
   <div class="container">
     <div class="meses" id="meses"></div>
   </div>
 </div>
 
 <script>
-let zoomLevel = 1;
+let zoomLevel = 0.9;
 const zoomContainer = document.getElementById('zoomContainer');
 const mesesEl = document.getElementById('meses');
 
-function zoomIn() { zoomLevel += 0.15; zoomContainer.style.transform = `scale(${zoomLevel})`; }
-function zoomOut() { zoomLevel = Math.max(0.6, zoomLevel - 0.15); zoomContainer.style.transform = `scale(${zoomLevel})`; }
+function zoomIn() { zoomLevel += 0.1; zoomContainer.style.transform = `scale(${zoomLevel})`; }
+function zoomOut() { zoomLevel = Math.max(0.5, zoomLevel - 0.1); zoomContainer.style.transform = `scale(${zoomLevel})`; }
 
 function generarCalendario(anio) {
   mesesEl.innerHTML = '';
@@ -165,38 +167,38 @@ function generarCalendario(anio) {
 
     const tbody = table.querySelector('tbody');
 
-    // Ejemplo Marzo (tu estilo con rowspan)
+    // Marzo de ejemplo (tu estructura real)
     if (mesesNombres[m] === "Marzo") {
       tbody.innerHTML = `
         <tr>
           <td></td>
-          <td class="inicio" contenteditable="true">2 Inicio clases</td>
-          <td class="ajuste" rowspan="2" contenteditable="true">3-4 -Ajuste- Teoría y Metrología</td>
+          <td contenteditable="true" class="inicio">2 Inicio clases secundaria Presentación</td>
+          <td contenteditable="true" class="ajuste" rowspan="2">3-4 -Ajuste- Teoría y Metrología</td>
           <td></td><td></td><td></td><td></td>
         </tr>
         <tr><td></td><td></td><td></td><td></td><td></td><td></td></tr>
         <tr>
-          <td class="apoyo" colspan="7" rowspan="4" contenteditable="true">Periodo de Apoyo y Acompañamiento</td>
+          <td contenteditable="true" class="apoyo" colspan="7" rowspan="3">Periodo de Apoyo y Acompañamiento</td>
         </tr>
-        <tr></tr><tr></tr><tr></tr>
+        <tr></tr><tr></tr>
         <tr>
           <td></td>
-          <td class="practica" rowspan="2" contenteditable="true">9-10 Corte Pieza Teoría y Metrología</td>
-          <td class="practica" rowspan="2" contenteditable="true">11-12 Corte Pieza Limado C1</td>
+          <td contenteditable="true" class="practica" rowspan="2">9-10 Corte Pieza Teoría y Metrología</td>
+          <td contenteditable="true" class="practica" rowspan="2">11-12 Corte Pieza Limado C1</td>
           <td></td><td></td><td></td><td></td>
         </tr>
         <tr></tr>
         <tr>
           <td></td>
-          <td class="feriado" contenteditable="true">24 Día Memoria</td>
-          <td class="practica" contenteditable="true">25 Limado C1 Teoría y Metrología</td>
-          <td class="practica" rowspan="2" contenteditable="true">26-27 Limado C2 Verif. perp.</td>
+          <td contenteditable="true" class="feriado">24 Día Memoria</td>
+          <td contenteditable="true" class="practica">25 Limado C1 Teoría y Metrología</td>
+          <td contenteditable="true" class="practica" rowspan="2">26-27 Limado C2 Verif. perp.</td>
           <td></td><td></td><td></td>
         </tr>
         <tr></tr>
       `;
     } else {
-      // Mes genérico con 6 semanas
+      // Mes genérico
       for (let s = 0; s < 6; s++) {
         const tr = document.createElement('tr');
         for (let d = 0; d < 7; d++) {
@@ -206,7 +208,7 @@ function generarCalendario(anio) {
       }
     }
 
-    // Selector de color por celda
+    // Selector de color
     const tds = tbody.querySelectorAll('td[contenteditable="true"]');
     tds.forEach(td => {
       const sel = document.createElement('select');
@@ -240,7 +242,7 @@ generarCalendario(2026);
 // Guardar / Descargar
 function guardarLocal() {
   localStorage.setItem('calendario', document.body.innerHTML);
-  alert('Guardado en localStorage');
+  alert('Guardado local');
 }
 
 function descargar() {
@@ -248,7 +250,7 @@ function descargar() {
   const url = URL.createObjectURL(blob);
   const a = document.createElement('a');
   a.href = url;
-  a.download = 'taller-calendario.html';
+  a.download = 'planificacion-taller.html';
   a.click();
 }
 </script>
