--- a/index.html
+++ b/index.html
@@ -3,26 +3,110 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Planificación Taller 1er Año - Editable con Merge</title>
+  <title>Planificación Taller 1er Año - Editable</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 15px; background: #f9f9f9; font-size: 13px; }
-    header { text-align: center; margin-bottom: 20px; }
-    h1 { color: #d35400; font-size: 1.8em; }
-    .controls { margin: 15px 0; text-align: center; }
-    select, button { font-size: 0.95em; padding: 6px 12px; margin: 4px; cursor: pointer; }
-    .container { max-width: 100%; overflow-x: auto; }
-    .meses { display: grid; grid-template-columns: repeat(auto-fit, minmax(420px, 1fr)); gap: 20px; }
-    .mes { background: white; border: 1px solid #ddd; border-radius: 6px; padding: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.08); }
-    .mes h2 { text-align: center; color: #d35400; margin: 0 0 6px; font-size: 1.2em; }
-    .mini-cal { font-size: 0.8em; text-align: center; margin-bottom: 6px; color: #666; }
-    table { width: 100%; border-collapse: collapse; table-layout: fixed; font-size: 0.78em; }
-    th, td { border: 1px solid #ccc; padding: 4px 5px; text-align: left; vertical-align: top; min-height: 60px; position: relative; word-wrap: break-word; }
-    th { background: #27ae60; color: white; text-align: center; font-weight: bold; padding: 5px; font-size: 0.75em; }
-    td[contenteditable="true"] { cursor: text; }
-    td[contenteditable="true"]:focus { outline: 2px solid #3498db; background: #f0f8ff; }
-    td.selected { outline: 2px dashed #e74c3c; background: rgba(231,76,60,0.1); }
-    select.color-picker { position: absolute; top: 2px; right: 2px; font-size: 0.65em; padding: 1px 3px; z-index: 5; background: white; border: 1px solid #aaa; border-radius: 3px; }
+    body {
+      font-family: Arial, sans-serif;
+      margin: 15px;
+      background: #f9f9f9;
+      font-size: 13px;
+      line-height: 1.3;
+    }
+    header {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    h1 {
+      color: #d35400;
+      font-size: 1.8em;
+    }
+    .controls {
+      margin: 15px 0;
+      text-align: center;
+    }
+    select, button {
+      font-size: 0.95em;
+      padding: 6px 12px;
+      margin: 4px;
+    }
+    .container {
+      max-width: 100%;
+      overflow-x: auto;
+    }
+    .meses {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(420px, 1fr));
+      gap: 20px;
+    }
+    .mes {
+      background: white;
+      border: 1px solid #ddd;
+      border-radius: 6px;
+      padding: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+    }
+    .mes h2 {
+      text-align: center;
+      color: #d35400;
+      margin: 0 0 6px;
+      font-size: 1.2em;
+    }
+    .mini-cal {
+      font-size: 0.8em;
+      text-align: center;
+      margin-bottom: 6px;
+      color: #666;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      table-layout: fixed;
+      font-size: 0.78em;
+    }
+    th, td {
+      border: 1px solid #ccc;
+      padding: 6px 8px;
+      text-align: left;
+      vertical-align: top;
+      width: 14.28%; /* Para que las 7 columnas sean iguales (100%/7) */
+      min-height: 80px; /* Cuadrado base */
+      height: auto; /* Permite expansión */
+      overflow: hidden; /* Evita desborde inicial */
+      position: relative;
+      word-wrap: break-word;
+    }
+    th {
+      background: #27ae60;
+      color: white;
+      text-align: center;
+      font-weight: bold;
+      padding: 6px;
+      font-size: 0.75em;
+      height: 30px; /* Headers más bajos */
+    }
+    td[contenteditable="true"] {
+      cursor: text;
+      min-height: 80px;
+      height: auto;
+      transition: height 0.2s;
+    }
+    td[contenteditable="true"]:focus {
+      outline: 2px solid #3498db;
+      background: #f0f8ff;
+    }
+    select.color-picker {
+      position: absolute;
+      top: 2px;
+      right: 2px;
+      font-size: 0.65em;
+      padding: 1px 3px;
+      z-index: 5;
+      background: white;
+      border: 1px solid #aaa;
+      border-radius: 3px;
+    }
 
+    /* Colores de tu PDF */
     .feriado { background: #e74c3c; color: white; font-weight: bold; }
     .ajuste { background: #f39c12; color: white; }
     .practica { background: #d35400; color: white; }
@@ -30,7 +114,10 @@
     .apoyo { background: #3498db; color: white; }
     .receso { background: #27ae60; color: white; font-weight: bold; }
 
-    .zoom-container { transform-origin: top left; transition: transform 0.3s; }
+    .zoom-container {
+      transform-origin: top left;
+      transition: transform 0.3s;
+    }
   </style>
 </head>
 <body>
@@ -47,8 +134,7 @@
     </label>
     <button onclick="zoomIn()">Zoom +</button>
     <button onclick="zoomOut()">Zoom -</button>
-    <button onclick="mergeSelected()">Unir celdas seleccionadas</button>
-    <button onclick="unmergeSelected()">Dividir celdas seleccionadas</button>
+    <button onclick="restaurarSelects()">Restaurar menús</button>
     <button onclick="guardarLocal()">Guardar local</button>
     <button onclick="descargar()">Descargar HTML</button>
   </div>
@@ -64,66 +150,26 @@
 let zoomLevel = 0.85;
 const zoomContainer = document.getElementById('zoomContainer');
 const mesesEl = document.getElementById('meses');
-let selectedCells = [];
 
 function zoomIn() { zoomLevel += 0.1; zoomContainer.style.transform = `scale(${zoomLevel})`; }
 function zoomOut() { zoomLevel = Math.max(0.5, zoomLevel - 0.1); zoomContainer.style.transform = `scale(${zoomLevel})`; }
 
-// Seleccionar celdas con Ctrl + clic
-document.addEventListener('click', e => {
-  if (e.target.tagName === 'TD' && e.target.contentEditable === 'true') {
-    if (e.ctrlKey) {
-      e.target.classList.toggle('selected');
-      if (e.target.classList.contains('selected')) {
-        selectedCells.push(e.target);
-      } else {
-        selectedCells = selectedCells.filter(cell => cell !== e.target);
-      }
-    } else {
-      // Limpiar selección si no es Ctrl
-      document.querySelectorAll('td.selected').forEach(cell => cell.classList.remove('selected'));
-      selectedCells = [];
-    }
+function agregarSelect(td) {
+  if (!td.querySelector('select.color-picker')) {
+    const sel = document.createElement('select');
+    sel.className = 'color-picker';
+    sel.innerHTML = `
+      <option value="">Color</option>
+      <option value="ajuste">Ajuste</option>
+      <option value="practica">Práctica</option>
+      <option value="pia">PIA</option>
+      <option value="apoyo">Apoyo</option>
+      <option value="receso">Receso</option>
+      <option value="feriado">Feriado</option>
+    `;
+    sel.onchange = () => td.className = sel.value;
+    td.appendChild(sel);
   }
-});
-
-function mergeSelected() {
-  if (selectedCells.length < 2) return alert('Selecciona al menos 2 celdas con Ctrl + clic');
-  
-  // Tomar la primera celda como base
-  const base = selectedCells[0];
-  const text = base.innerText.trim();
-  const colorClass = base.className.replace('selected', '').trim();
-
-  // Unir: poner rowspan/colspan según posición (simplificado: horizontal/vertical básico)
-  let rowStart = base.parentNode.rowIndex;
-  let colStart = base.cellIndex;
-  let rowSpan = 1;
-  let colSpan = 1;
-
-  selectedCells.forEach(cell => {
-    if (cell.parentNode.rowIndex === rowStart) colSpan++;
-    else rowSpan++;
-    cell.innerHTML = '';
-  });
-
-  base.rowSpan = rowSpan;
-  base.colSpan = colSpan;
-  base.innerHTML = text + '<select class="color-picker"><option value="">Color</option><option value="ajuste">Ajuste</option><option value="practica">Práctica</option><option value="pia">PIA</option><option value="apoyo">Apoyo</option><option value="receso">Receso</option><option value="feriado">Feriado</option></select>';
-  base.className = colorClass;
-
-  selectedCells = [];
-  document.querySelectorAll('td.selected').forEach(cell => cell.classList.remove('selected'));
-}
-
-function unmergeSelected() {
-  selectedCells.forEach(cell => {
-    cell.rowSpan = 1;
-    cell.colSpan = 1;
-    cell.innerHTML = cell.innerText.trim() + '<select class="color-picker"><option value="">Color</option><option value="ajuste">Ajuste</option><option value="practica">Práctica</option><option value="pia">PIA</option><option value="apoyo">Apoyo</option><option value="receso">Receso</option><option value="feriado">Feriado</option></select>';
-  });
-  selectedCells = [];
-  document.querySelectorAll('td.selected').forEach(cell => cell.classList.remove('selected'));
 }
 
 function generarCalendario(anio) {
@@ -137,69 +183,56 @@ function generarCalendario(anio) {
       <div class="mini-cal">Mini-calendario ${mesesNombres[m]} ${anio}</div>`;
 
     const table = document.createElement('table');
-    table.innerHTML = `<thead><tr><th>DOM</th><th>LUN</th><th>MAR</th><th>MIE</th><th>JUE</th><th>VIE</th><th>SAB</th></tr></thead><tbody></tbody>`;
+    table.innerHTML = `<thead><tr>
+      <th>DOM</th><th>LUN</th><th>MAR</th><th>MIE</th><th>JUE</th><th>VIE</th><th>SAB</th>
+    </tr></thead><tbody></tbody>`;
+
     const tbody = table.querySelector('tbody');
 
     // Marzo - texto repetido por día
     if (mesesNombres[m] === "Marzo") {
       tbody.innerHTML = `
-        <tr><td></td><td contenteditable="true">2 Inicio clases secundaria Presentación</td><td contenteditable="true" class="ajuste">3 -Ajuste- Teoría y Metrología</td><td contenteditable="true" class="ajuste">4 -Ajuste- Teoría y Metrología</td><td></td><td></td><td></td></tr>
-        <tr><td contenteditable="true" class="apoyo">Periodo de Apoyo y Acompañamiento</td><td contenteditable="true" class="apoyo">Periodo de Apoyo y Acompañamiento</td><td contenteditable="true" class="apoyo">Periodo de Apoyo y Acompañamiento</td><td contenteditable="true" class="apoyo">Periodo de Apoyo y Acompañamiento</td><td contenteditable="true" class="apoyo">Periodo de Apoyo y Acompañamiento</td><td contenteditable="true" class="apoyo">Periodo de Apoyo y Acompañamiento</td><td contenteditable="true" class="apoyo">Periodo de Apoyo y Acompañamiento</td></tr>
-        <tr><td contenteditable="true" class="apoyo">Periodo de Apoyo y Acompañamiento</td><td contenteditable="true" class="apoyo">Periodo de Apoyo y Acompañamiento</td><td contenteditable="true" class="apoyo">Periodo de Apoyo y Acompañamiento</td><td contenteditable="true" class="apoyo">Periodo de Apoyo y Acompañamiento</td><td contenteditable="true" class="apoyo">Periodo de Apoyo y Acompañamiento</td><td contenteditable="true" class="apoyo">Periodo de Apoyo y Acompañamiento</td><td contenteditable="true" class="apoyo">Periodo de Apoyo y Acompañamiento</td></tr>
-        <tr><td></td><td contenteditable="true" class="practica">9 Corte Pieza Teoría y Metrología</td><td contenteditable="true" class="practica">10 Corte Pieza Teoría y Metrología</td><td contenteditable="true" class="practica">11 Corte Pieza Limado C1</td><td contenteditable="true" class="practica">12 Corte Pieza Limado C1</td><td></td><td></td></tr>
-        <tr><td></td><td contenteditable="true" class="feriado">24 Día Nacional de la Memoria</td><td contenteditable="true" class="practica">25 Limado C1 Teoría y Metrología</td><td contenteditable="true" class="practica">26 Limado C2 Verif. perp.</td><td contenteditable="true" class="practica">27 Limado C2 Verif. perp.</td><td></td><td></td></tr>
-      `;
-    } else {
-      for (let s = 0; s < 6; s++) {
-        const tr = document.createElement('tr');
-        for (let d = 0; d < 7; d++) tr.innerHTML += '<td contenteditable="true"></td>';
-        tbody.appendChild(tr);
-      }
-    }
-
-    // Selector de color
-    const tds = tbody.querySelectorAll('td[contenteditable="true"]');
-    tds.forEach(td => {
-      const sel = document.createElement('select');
-      sel.className = 'color-picker';
-      sel.innerHTML = `
-        <option value="">Color</option>
-        <option value="ajuste">Ajuste</option>
-        <option value="practica">Práctica</option>
-        <option value="pia">PIA</option>
-        <option value="apoyo">Apoyo</option>
-        <option value="receso">Receso</option>
-        <option value="feriado">Feriado</option>
-      `;
-      sel.onchange = () => td.className = sel.value;
-      td.appendChild(sel);
-    });
-
-    mesDiv.appendChild(table);
-    mesesEl.appendChild(mesDiv);
-  }
-}
-
-// Cambio de año
-document.getElementById('anioSelect').onchange = e => generarCalendario(e.target.value);
-
-// Inicial
-generarCalendario(2026);
-
-// Guardar / Descargar
-function guardarLocal() {
-  localStorage.setItem('calendario', document.body.innerHTML);
-  alert('Guardado en localStorage');
-}
-
-function descargar() {
-  const blob = new Blob([document.documentElement.outerHTML], {type: 'text/html'});
-  const url = URL.createObjectURL(blob);
-  const a = document.createElement('a');
-  a.href = url;
-  a.download = 'planificacion-taller.html';
-  a.click();
-}
-</script>
-</body>
-</html>
+        <tr>
+          <td contenteditable="true"></td>
+          <td contenteditable="true">2 Inicio clases secundaria Presentación</td>
+          <td contenteditable="true" class="ajuste">3 -Ajuste- Teoría y Metrología</td>
+          <td contenteditable="true" class="ajuste">4 -Ajuste- Teoría y Metrología</td>
+          <td contenteditable="true"></td>
+          <td contenteditable="true"></td>
+          <td contenteditable="true"></td>
+        </tr>
+        <tr>
+          <td contenteditable="true" class="apoyo">Periodo de Apoyo y Acompañamiento</td>
+          <td contenteditable="true" class="apoyo">Periodo de Apoyo y Acompañamiento</td>
+          <td contenteditable="true" class="apoyo">Periodo de Apoyo y Acompañamiento</td>
+          <td contenteditable="true" class="apoyo">Periodo de Apoyo y Acompañamiento</td>
+          <td contenteditable="true" class="apoyo">Periodo de Apoyo y Acompañamiento</td>
+          <td contenteditable="true" class="apoyo">Periodo de Apoyo y Acompañamiento</td>
+          <td contenteditable="true" class="apoyo">Periodo de Apoyo y Acompañamiento</td>
+        </tr>
+        <tr>
+          <td contenteditable="true" class="apoyo">Periodo de Apoyo y Acompañamiento</td>
+          <td contenteditable="true" class="apoyo">Periodo de Apoyo y Acompañamiento</td>
+          <td contenteditable="true" class="apoyo">Periodo de Apoyo y Acompañamiento</td>
+          <td contenteditable="true" class="apoyo">Periodo de Apoyo y Acompañamiento</td>
+          <td contenteditable="true" class="apoyo">Periodo de Apoyo y Acompañamiento</td>
+          <td contenteditable="true" class="apoyo">Periodo de Apoyo y Acompañamiento</td>
+          <td contenteditable="true" class="apoyo">Periodo de Apoyo y Acompañamiento</td>
+        </tr>
+        <tr>
+          <td contenteditable="true"></td>
+          <td contenteditable="true" class="practica">9 Corte Pieza Teoría y Metrología</td>
+          <td contenteditable="true" class="practica">10 Corte Pieza Teoría y Metrología</td>
+          <td contenteditable="true" class="practica">11 Corte Pieza Limado C1</td>
+          <td contenteditable="true" class="practica">12 Corte Pieza Limado C1</td>
+          <td contenteditable="true"></td>
+          <td contenteditable="true"></td>
+        </tr>
+        <tr>
+          <td contenteditable="true"></td>
+          <td contenteditable="true" class="feriado">24 Día Nacional de la Memoria</td>
+          <td contenteditable="true" class="practica">25 Limado C1 Teoría y Metrología</td>
+          <td contenteditable="true" class="practica">26 Limado C2 Verif. perp.</td>
+          <td contenteditable="true" class="practica">27 Limado C2 Verif. perp.</td>
+          <td contenteditable="true"></td>
+          <td contenteditable="true"></td>
