--- a/index.html
+++ b/index.html
@@ -5,28 +5,88 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Planificación Taller 1er Año - Prueba Estática</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 20px; background: #f9f9f9; }
-    h1 { text-align: center; color: #d35400; }
-    .mes { margin: 30px 0; background: white; border: 1px solid #ddd; padding: 15px; border-radius: 6px; }
-    h2 { text-align: center; color: #d35400; }
-    table { width: 100%; border-collapse: collapse; font-size: 0.85em; }
-    th, td { border: 1px solid #ccc; padding: 6px; vertical-align: top; min-height: 80px; }
-    th { background: #27ae60; color: white; text-align: center; }
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+      margin: 20px;
+      background: #f9f9f9;
+      color: #222;
+      font-size: 13px;
+      line-height: 1.35;
+    }
+    header {
+      text-align: center;
+      margin-bottom: 30px;
+    }
+    h1 {
+      color: #d35400;
+      font-size: 1.9em;
+    }
+    .mes {
+      margin: 40px 0;
+      background: white;
+      border: 1px solid #ddd;
+      border-radius: 6px;
+      padding: 15px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+      page-break-inside: avoid;
+    }
+    .mes h2 {
+      text-align: center;
+      color: #d35400;
+      margin: 0 0 10px;
+      font-size: 1.4em;
+    }
+    .mini-cal {
+      font-size: 0.9em;
+      text-align: center;
+      margin-bottom: 10px;
+      color: #555;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      table-layout: fixed;
+      font-size: 0.82em;
+    }
+    th, td {
+      border: 1px solid #ccc;
+      padding: 6px 8px;
+      text-align: left;
+      vertical-align: top;
+      min-height: 80px;
+      position: relative;
+      word-wrap: break-word;
+    }
+    th {
+      background: #27ae60;
+      color: white;
+      text-align: center;
+      font-weight: bold;
+      font-size: 0.8em;
+      padding: 8px 4px;
+    }
+    td {
+      cursor: default;
+    }
+
+    .feriado { background: #e74c3c; color: white; font-weight: bold; }
     .ajuste { background: #f39c12; color: white; }
     .practica { background: #d35400; color: white; }
+    .pia { background: #9b59b6; color: white; }
     .apoyo { background: #3498db; color: white; }
     .receso { background: #27ae60; color: white; font-weight: bold; }
-    .feriado { background: #e74c3c; color: white; font-weight: bold; }
-    .pia { background: #9b59b6; color: white; }
   </style>
 </head>
 <body>
 
-<h1>Planificación Taller 1er Año - Prueba Estática</h1>
-<p>Si ves las dos tablas abajo, el HTML carga bien. El problema era el JS.</p>
+<header>
+  <h1>Planificación Taller 1er Año - Prueba Estática</h1>
+  <p>Si ves las tablas de Marzo y Julio abajo, el HTML carga bien. El problema era el JavaScript.</p>
+</header>
 
 <div class="mes">
   <h2>Marzo 2026</h2>
+  <div class="mini-cal">Mini-calendario Marzo 2026</div>
   <table>
     <thead>
       <tr>
@@ -36,8 +96,8 @@
     <tbody>
       <tr>
         <td></td>
-        <td class="inicio">2 Inicio clases</td>
-        <td class="ajuste" rowspan="2">3-4 -Ajuste- Teoría y Metrología</td>
+        <td>2<br>Inicio clases secundaria<br>Presentación</td>
+        <td class="ajuste" rowspan="2">3-4<br>-Ajuste-<br>Teoría y Metrología</td>
         <td></td><td></td><td></td><td></td>
       </tr>
       <tr><td></td><td></td><td></td><td></td><td></td><td></td></tr>
@@ -47,16 +107,16 @@
       <tr></tr><tr></tr>
       <tr>
         <td></td>
-        <td class="practica" rowspan="2">9-10 Corte Pieza Teoría y Metrología</td>
-        <td class="practica" rowspan="2">11-12 Corte Pieza Limado C1</td>
+        <td class="practica" rowspan="2">9-10<br>Corte Pieza Teoría y Metrología</td>
+        <td class="practica" rowspan="2">11-12<br>Corte Pieza Limado C1</td>
         <td></td><td></td><td></td><td></td>
       </tr>
       <tr></tr>
       <tr>
         <td></td>
-        <td class="feriado">24 Día Memoria</td>
-        <td class="practica">25 Limado C1</td>
-        <td class="practica" rowspan="2">26-27 Limado C2 Verif. perp.</td>
+        <td class="feriado">24<br>Día Nacional de la Memoria</td>
+        <td class="practica">25<br>Limado C1 Teoría y Metrología</td>
+        <td class="practica" rowspan="2">26-27<br>Limado C2 Verif. perp.</td>
         <td></td><td></td><td></td>
       </tr>
       <tr></tr>
@@ -66,6 +126,7 @@
 
 <div class="mes">
   <h2>Julio 2026</h2>
+  <div class="mini-cal">Mini-calendario Julio 2026</div>
   <table>
     <thead>
       <tr>
@@ -74,7 +135,7 @@
     </thead>
     <tbody>
       <tr>
-        <td colspan="7" class="pia" rowspan="2">PIA / EMI</td>
+        <td colspan="7" class="pia" rowspan="2">PIA / EMI (pre-receso)</td>
       </tr>
       <tr></tr>
       <tr>
